--- a/src/contact.css
+++ b/src/contact.css
@@ -1,5 +1,10 @@
-.cpage {
+.cpage-display {
+    position: sticky;
+    bottom: 0%;
     display: flex;
+    overflow: hidden;
+    align-self: center;
+    justify-content: column;
     padding: 2rem;
     flex-direction: column;
     align-self: baseline;
@@ -10,9 +15,26 @@
     background: rgba(246, 246, 246, 0.75);
     backdrop-filter: blur(17.5px);
     z-index: 1;
+    transition: ease-out 0.5s;
+}
+.cpage-hidden {
+    position: fixed;
+    bottom: -100%;
+    overflow: hidden;
+    padding: 2rem;
+    flex-direction: column;
+    align-self: baseline;
+    border-radius: 1.25rem 1.25rem 0rem 0rem;
+    border-top: 1px solid #191919;
+    border-right: 1px solid #191919;
+    border-left: 1px solid #191919;
+    background: rgba(246, 246, 246, 0.75);
+    backdrop-filter: blur(17.5px);
+    z-index: 1;
+    transition: ease-out 1s;
 }
 
-.cpage .p1 {
+.p1 {
     margin: 0;
     color: #191919;
     font-size: 3.5rem;
@@ -22,7 +44,7 @@
     line-height: 110%;
 }
 
-.cpage .p2 {
+.p2 {
     color: #191919;
     font-size: 6rem;
     font-family: SF Pro;
@@ -33,7 +55,7 @@
     margin-top: 0;
 }
 
-.cpage .ccontent {
+.ccontent {
     display: inline-flex;
     flex-direction: row;
     color: #191919;
