--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,9 @@
   src: url(/public/SF-Pro.ttf);
 }
 body {
-  margin: 0;
-  padding:2rem 2rem 0 2rem;
+  margin: 2rem;
+  padding:0;
   background-color: #F6F6F6;
   font-family: SF Pro;
+  gap: 10rem;
 }
