--- a/src/work.css
+++ b/src/work.css
@@ -8,6 +8,7 @@
 }
 
 .wpage .wparent1 {
+    position: sticky;
     margin-top: 2rem;
     display: flex;
     flex-direction: row;
@@ -53,7 +54,6 @@
 
 
 .wpage .wparent2 {
-    margin-top: 2rem;
     font-size: 1rem;
     font-family: SF Pro;
     font-style: normal;
@@ -61,16 +61,16 @@
     line-height: normal;
     display: inline-flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: top;
+    width: 100%;
 }
 
 .wparent2 .wcontent {
+    top:2rem;
     gap: 2rem;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
     width: 25rem;
 }
 
@@ -134,4 +134,21 @@
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+}
+
+.wcase{
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: right;
+    gap: 2rem;
+    width: 36rem;
+}
+
+.wcase .image{
+    max-width: 36rem;
+    height: 25rem;
+    object-fit: contain;
+    border-radius: 2px;
 }
