--- a/src/work.css
+++ b/src/work.css
@@ -1,14 +1,18 @@
 .wpage {
     margin: 8rem 0 0 0;
     padding: 0;
+    padding-top: 15vh;
     height: 100%;
+    scroll-snap-align: start;
     width: 100%;
     display: flex;
     flex-direction: column;
 }
 
 .wpage .wparent1 {
+    background-color: #F6F6F6;
     position: sticky;
+    top:15vh;
     margin-top: 2rem;
     display: flex;
     flex-direction: row;
