--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,14 @@
 .sec1,.sec2,.sec3{
     padding-top: 15vh;
     padding-bottom: 15vh;
-    scroll-snap-align: center;
+    scroll-snap-align: top;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 100rem 0;
 }
 .mid-sec{
     height: 100vh;
     width: 100%;
-    background-color: #444;
+    background-color: #191919;
 }
