--- a/src/divider.css
+++ b/src/divider.css
@@ -1,8 +1,5 @@
-.divider{
+.divi{
     width: 100%;
-    height: 10%;
+    height: 100%;
     background-color: #191919;
-    margin: 0;
-    z-index: 3;
-
 }
