--- a/src/nav.css
+++ b/src/nav.css
@@ -70,6 +70,7 @@
     font-style: normal;
     font-weight: 500;
     line-height: normal;
+    z-index: 1;
   }
 
   .hportfolio {
@@ -81,5 +82,6 @@
     font-style: normal;
     font-weight: 500;
     line-height: normal;
+    z-index: 1;
   }
   
