--- a/src/work.css
+++ b/src/work.css
@@ -1,17 +1,17 @@
 .wpage {
     margin: 8rem 0 0 0;
-    padding: 0;
+    padding: 2rem 2rem 8rem 2rem;
     padding-top: 15vh;
     height: 100%;
-    scroll-snap-align: start;
+    scroll-snap-align: start ;
     width: 100%;
     display: flex;
     flex-direction: column;
+    background-color: #F6F6F6;
+
 }
 
 .wpage .wparent1 {
-    background-color: #F6F6F6;
-    position: sticky;
     top:15vh;
     margin-top: 2rem;
     display: flex;
