--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ html{
 body {
   margin: 0;
   padding:0;
-  background-color: #191919;
+  background-color: #F6F6F6;
   font-family: SF Pro;
   z-index: -1;
 }
