--- a/src/App.css
+++ b/src/App.css
@@ -7,13 +7,13 @@
     scroll-padding-bottom: 100vh;
     scroll-snap-align: top;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 250rem 0;
+    margin: 0 2rem;
     z-index: 100;
 }
 .mid-sec{
-    height: 100vh;
+    height: 100%;
     width: 100%;
-    background-color: #191919;
 }
