--- a/src/home.css
+++ b/src/home.css
@@ -1,11 +1,11 @@
 .hpage {
   background-color: #f6f6f6;
-  margin: 0 0 0 0;
+  margin:  0;
   padding: 8rem 2rem 4rem 2rem;
   height: 100%;
   width: 100%;
   display: flex;
-  scroll-snap-align: start;
+  scroll-snap-align:center;
   flex-direction: column;
 }
 
