--- a/src/work.css
+++ b/src/work.css
@@ -1,14 +1,14 @@
 .wpage {
     margin: 8rem 0 0 0;
-    padding: 2rem 2rem 16rem 2rem;
     padding-top: 15vh;
+    padding-bottom: 50vh;
     height: 100%;
-    scroll-snap-align: start ;
+    scroll-snap-align: start;
+    scroll-snap-type: proximity;
     width: 100%;
     display: flex;
     flex-direction: column;
     background-color: #F6F6F6;
-
 }
 
 .wpage .wparent1 {
