--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @font-face {
   font-family: SF Pro;
   src: url(./SF-Pro.woff2) format('woff2');
+  font-display: swap;
 }
 html{
   overflow-y: scroll;
