--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 .scroll-container{
+    margin: 12rem 0 0 0 ;
+    padding: 0 0 0 0 ;
     scroll-snap-type: y mandatory;
     scroll-behavior: smooth;
 }
