--- a/src/home.css
+++ b/src/home.css
@@ -1,11 +1,11 @@
 .hpage {
   background-color: #f6f6f6;
-  margin:  0;
-  padding: 8rem 2rem 4rem 2rem;
+  margin:0;
+  padding:0;
   height: 100%;
   width: 100%;
   display: flex;
-  scroll-snap-align:center;
+  scroll-snap-align: end;
   flex-direction: column;
 }
 
