--- a/src/about.css
+++ b/src/about.css
@@ -1,12 +1,15 @@
 .apage {
   margin:0;
-  padding: 0;
+  padding:20vh 0 0 0;
   height: 100vh;
   width: 100%;
   scroll-snap-align: start;
   display: flex;
-  flex-direction: column;
+  align-items: baseline;
+  overflow: hidden;
   background-color: #f6f6f6;
+  flex-direction: column;
+  gap: 4rem;
 }
 .aparent1 .aheading {
   display: flex;
@@ -21,24 +24,21 @@
 }
 
 .apage .aparent1 {
-  margin-top: 2rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: top;
+  width: 100%;
 }
 
 .aparent1 .asubheading {
-  position: absolute;
-  right: 2rem;
-  float: right;
   color: #191919;
   font-size: 3.5rem;
   font-family: SF Pro;
   font-style: normal;
   font-weight: 250;
   line-height: 110%;
-  width: 45rem;
+  width: 42rem;
+  float: right;
 }
 
 .aheading p {
@@ -52,11 +52,11 @@
 }
 
 .aparent2 {
-  margin-top: 2rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: auto;
+  width: 100%;
+  align-items: center;
 }
 
 .askills .asubheading {
@@ -75,23 +75,21 @@
   flex-direction: column;
   justify-content: space-between;
   gap: 0.5rem;
+  margin: 0;
 }
 
 .aparent2 .apara {
-  margin-top:0.5rem;
-  position: absolute;
   float: right;
-  right: 12rem;
-  width: 35rem;
+  width: 42rem;
   font-size: 1rem;
   font-family: SF Pro;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+  justify-content: space-evenly;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  gap: 2rem;
 }
 
 .aparent2 .apara1 p {
@@ -105,14 +103,15 @@
 }
 
 .atools ul {
-  color: #191919;
   font-size: 3.5rem;
   font-family: SF Pro;
   font-style: normal;
   font-weight: 250;
   line-height: 110%;
-  display: flex;
+  display: inline-flex;
   flex-direction: row;
-  justify-content: space-between;
-  gap: 1rem;
+  justify-content: space-evenly;
+  width: 100vw;
+  padding: 0;
+  margin: 0;
 }
