--- a/src/home.css
+++ b/src/home.css
@@ -1,12 +1,14 @@
 .hpage {
   background-color: #f6f6f6;
   margin:0;
-  padding-bottom: 2rem;
-  height: 100%;
+  margin-top: 2rem;
+  padding:0;
+  height: 100vh;
   width: 100%;
   display: flex;
   scroll-snap-align: end;
   flex-direction: column;
+  justify-content: space-around;
 }
 
 .hpage .hheading {
