--- a/src/footer.css
+++ b/src/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    width:90vw;
+    width:90%;
     border-radius: 1.25rem 1.25rem 0rem 0rem;
     border-top: 1px solid #191919;
     border-right: 1px solid #191919;
@@ -7,8 +7,9 @@
     background: rgba(246, 246, 246, 0.75);
     backdrop-filter: blur(17.5px);
     margin: 0 auto;
-    scroll-snap-align: end;
     padding-bottom: 2rem;
+    position: relative;
+    bottom: 0;
 }
 
 .footer .content1{
