--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,12 @@
 @font-face {
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 }
-html{
-  overflow-y: scroll;
-  scroll-snap-type: y mandatory;
-}
 body {
-  width: 100vw;
+  width: 100%;
   margin: 0;
-  padding:0;
+  padding: 0;
   background-color: #F6F6F6;
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;;
-  z-index: -1;
+  z-index:0;
   color: #191919;
 }
