--- a/src/home.css
+++ b/src/home.css
@@ -18,14 +18,14 @@ line-height: 100%; */
 .hpage {
   width: auto;
   height: 90vh;
-  padding: 2rem;
+  padding:4rem 2rem;
   padding-bottom: 0;
   color: #191919;
   justify-content: space-around;
   align-items: center;
   display: flex;
   flex-direction: column;
-  border-bottom: 1px solid #191919;
+  border-bottom: 2px solid #191919;
 }
 
 .hpage .hheading {
