--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 }
 body {
-  width: 100%;
+  width: 100vw;
   margin: 0;
   padding: 0;
   background-color: #F6F6F6;
