--- a/src/work.css
+++ b/src/work.css
@@ -103,8 +103,7 @@
     margin: 0;
     padding: 0;
 }
-
-.wcase{
+.wparent2 .wcase{
     border-radius: 1.25rem;
     width: 100%;
 }
@@ -112,7 +111,7 @@
     width:100%;
     border-radius: 1.25rem;
     object-fit: cover;
-    height: 100%;
+    height: 98.5%;
     transition: all 0.3s ease-out;
 }
 .wcase .image:hover{
