--- a/src/work.css
+++ b/src/work.css
@@ -113,9 +113,11 @@
     object-fit: cover;
     height: 98.5%;
     transition: all 0.3s ease-out;
+    border: #19191900 1px solid;
 }
 .wcase .image:hover{
     scale: 0.95;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
+    border: #191919 1px solid;
     transition: all 0.3s ease-out;
 }
